--- a/terraform/build_agent/pipeline.yaml
+++ b/terraform/build_agent/pipeline.yaml
@@ -22,16 +22,16 @@ stages:
       - job: TerraformPlanDev
         displayName: "Run Terraform Plan for Dev"
         steps:
-          - task: Bash@3
-            displayName: "Install Terraform"
-            inputs:
-              targetType: "inline"
-              script: |
-                echo "Installing Terraform version $(TF_VERSION)..."
-                wget https://releases.hashicorp.com/terraform/$(TF_VERSION)/terraform_$(TF_VERSION)_linux_amd64.zip
-                unzip terraform_$(TF_VERSION)_linux_amd64.zip
-                sudo mv terraform /usr/local/bin/
-                terraform version
+          # - task: Bash@3
+          #   displayName: "Install Terraform"
+          #   inputs:
+          #     targetType: "inline"
+          #     script: |
+          #       echo "Installing Terraform version $(TF_VERSION)..."
+          #       wget https://releases.hashicorp.com/terraform/$(TF_VERSION)/terraform_$(TF_VERSION)_linux_amd64.zip
+          #       unzip terraform_$(TF_VERSION)_linux_amd64.zip
+          #       sudo mv terraform /usr/local/bin/
+          #       terraform version
 
           - task: Bash@3
             displayName: "Terraform Init"
