--- a/terraform/build_agent/pipeline.yaml
+++ b/terraform/build_agent/pipeline.yaml
@@ -22,16 +22,6 @@ stages:
       - job: TerraformPlanDev
         displayName: "Run Terraform Plan for Dev"
         steps:
-          # - task: Bash@3
-          #   displayName: "Install Terraform"
-          #   inputs:
-          #     targetType: "inline"
-          #     script: |
-          #       echo "Installing Terraform version $(TF_VERSION)..."
-          #       wget https://releases.hashicorp.com/terraform/$(TF_VERSION)/terraform_$(TF_VERSION)_linux_amd64.zip
-          #       unzip terraform_$(TF_VERSION)_linux_amd64.zip
-          #       sudo mv terraform /usr/local/bin/
-          #       terraform version
 
           - task: Bash@3
             displayName: "Terraform Init"
@@ -39,6 +29,8 @@ stages:
               targetType: "inline"
               workingDirectory: terraform/build_agent
               script: |
+                ls
+                pwd
                 terraform init -backend-config=backend.config
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
