--- a/terraform/build_agent/pipeline.yaml
+++ b/terraform/build_agent/pipeline.yaml
@@ -16,11 +16,11 @@ variables:
     value: "1.7.5"
 
 stages:
-  - stage: Dev
-    displayName: "Terraform Plan (Dev)"
+  - stage: BA
+    displayName: "Terraform Buildagent"
     jobs:
-      - job: TerraformPlanDev
-        displayName: "Run Terraform Plan for Dev"
+      - job: Terraform
+        displayName: "Buildagent infra"
         steps:
           - task: Bash@3
             displayName: "Terraform Init"
@@ -29,20 +29,13 @@ stages:
               workingDirectory: terraform/build_agent
               script: |
                 terraform init -backend-config=backend.config
+                terraform plan -var-file="parameters/common.tfvars" -out=common-tfplan
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
               ARM_CLIENT_ID: $(ARMCLIENTID)
               ARM_CLIENT_SECRET: $(ARMCLIENTSECRET)
               ARM_SUBSCRIPTION_ID: $(ARMSUBSCRIPTIONID)
               ARM_TENANT_ID: $(ARMTENANTID)
-
-          - task: Bash@3
-            displayName: "Terraform Plan"
-            inputs:
-              targetType: "inline"
-              workingDirectory: terraform/build_agent
-              script: |
-                terraform plan -var-file="parameters/common.tfvars" -out=common-tfplan
 
           # - task: Bash@3
           #   displayName: "Terraform Apply (Dev)"
