--- a/terraform/build_agent/pipeline.yaml
+++ b/terraform/build_agent/pipeline.yaml
@@ -9,6 +9,10 @@ parameters:
     displayName: "Run Terraform Apply?"
     type: boolean
     default: false
+  - name: runDestroy
+    displayName: "Run Terraform Apply?"
+    type: boolean
+    default: false
 
 variables:
   - group: SEC_MS
@@ -45,6 +49,21 @@ stages:
               workingDirectory: terraform/build_agent
               script: |
                 terraform apply common-tfplan
+            env:
+              ARM_ACCESS_KEY: $(ARMACCESSKEY)
+              ARM_CLIENT_ID: $(ARMCLIENTID)
+              ARM_CLIENT_SECRET: $(ARMCLIENTSECRET)
+              ARM_SUBSCRIPTION_ID: $(ARMSUBSCRIPTIONID)
+              ARM_TENANT_ID: $(ARMTENANTID)
+
+          - task: Bash@3
+            displayName: "Terraform Apply"
+            condition: and(succeeded(), eq('${{ parameters.runDestroy }}', true))
+            inputs:
+              targetType: "inline"
+              workingDirectory: terraform/build_agent
+              script: |
+                terraform destroy common-tfplan
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
               ARM_CLIENT_ID: $(ARMCLIENTID)
