--- a/terraform/apps/pipeline.yaml
+++ b/terraform/apps/pipeline.yaml
@@ -21,19 +21,19 @@ variables:
 
 stages:
   - stage: BA
-    displayName: "Terraform Infrastructure"
+    displayName: "Terraform Apps"
     jobs:
       - job: Terraform
-        displayName: "Infrastructure"
+        displayName: "Apps"
         steps:
           - task: Bash@3
             displayName: "Terraform Init & Plan"
             inputs:
               targetType: "inline"
-              workingDirectory: terraform/infrastructure
+              workingDirectory: terraform/apps
               script: |
                 terraform init -backend-config=backend.config
-                terraform plan -var-file="parameters/dev.tfvars" -out=infra-dev-tfplan
+                terraform plan -var-file="parameters/dev.tfvars" -out=apps-dev-tfplan
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
               ARM_CLIENT_ID: $(ARMCLIENTID)
@@ -46,9 +46,9 @@ stages:
             condition: and(succeeded(), eq('${{ parameters.runApply }}', true))
             inputs:
               targetType: "inline"
-              workingDirectory: terraform/infrastructure
+              workingDirectory: terraform/apps
               script: |
-                terraform apply infra-dev-tfplan
+                terraform apply apps-dev-tfplan
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
               ARM_CLIENT_ID: $(ARMCLIENTID)
@@ -61,7 +61,7 @@ stages:
           #   condition: and(succeeded(), eq('${{ parameters.runDestroy }}', true))
           #   inputs:
           #     targetType: "inline"
-          #     workingDirectory: terraform/infrastructure
+          #     workingDirectory: terraform/apps
           #     script: |
           #       terraform destroy common-tfplan
           #   env:
