--- a/terraform/infrastructure/backend.config
+++ b/terraform/infrastructure/backend.config
@@ -1,4 +1,4 @@
 resource_group_name  = "do-test-state-rg"
 storage_account_name = "devops123123"
 container_name       = "tfstate"
-key                  = "infra.dev.terraform.tfstate"
+key                  = "infrac.dev.terraform.tfstate"
