--- a/terraform/infrastructure/pipeline.yaml
+++ b/terraform/infrastructure/pipeline.yaml
@@ -33,6 +33,7 @@ stages:
               workingDirectory: terraform/infrastructure
               script: |
                 terraform init -backend-config=backend.config
+                terraform import -var-file="parameters/dev.tfvars" module.apim.azurerm_api_management.apim /subscriptions/315e574e-7153-4853-8cfe-fa416bb08a23/resourceGroups/z-rg-ingress-dev/providers/Microsoft.ApiManagement/service/apim-custom-onion
                 terraform plan -var-file="parameters/dev.tfvars" -out=infra-dev-tfplan
             env:
               ARM_ACCESS_KEY: $(ARMACCESSKEY)
