--- a/terraform/infrastructure/backend.config
+++ b/terraform/infrastructure/backend.config
@@ -1,4 +1,4 @@
-resource_group_name  = "do-test-state-rg"
-storage_account_name = "devops123123"
+resource_group_name  = "z-rg-state"
+storage_account_name = "zsastateadokrkm"
 container_name       = "tfstate"
 key                  = "infra.dev.terraform.tfstate"
